@@ -1,3 +1,10 @@
+Wed Dec 31 08:12:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/barrier/client/Barrier_Client.h:
+        * cuts/utils/barrier/client/Barrier_Client.cpp:
+
+          . Refactored the code.
+
 Wed Dec 31 08:00:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/barrier/barrier.idl:
